# spdt_abm

./: .gitignore  README.md  household_energy_abm_partner_guide.md  pyproject.toml  requirements.txt
household_energy/: climate.py  model.py  run.py  server.py
household_energy_abm/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  server.py
household_energy_abm/household_energy/: agent.py  analyze.py  model.py  run.py  server.py
household_energy_abm/notebooks/: 02-energy-model-tests.ipynb
mesa_model/: README.md  model.py
notebooks/: 01-climate-prep.ipynb
